20230110 - memperbaiki UI beberapa layout #soonwillbeproud

--- a/app/src/main/res/layout/activity_edit_laundry.xml
+++ b/app/src/main/res/layout/activity_edit_laundry.xml
@@ -121,6 +121,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="12dp"
                 android:orientation="horizontal"
                 android:gravity="center_vertical">
 
@@ -215,6 +216,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="12dp"
                 android:orientation="horizontal"
                 android:gravity="center_vertical">
 
@@ -279,6 +281,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="12dp"
                 android:gravity="center_vertical">
 
                 <ImageView
