--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#1572A1</color>
     <color name="lightblue">#9AD0EC</color>
+    <color name="orange">#F29339</color>
+    <color name="red">#B90E0A</color>
+    <color name="green">#299617</color>
 </resources>
