--- a/app/src/main/res/layout/activity_order_detail_new.xml
+++ b/app/src/main/res/layout/activity_order_detail_new.xml
@@ -27,7 +27,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="580dp"
+        android:paddingBottom="20dp"
         android:fillViewport="true">
 
         <LinearLayout
@@ -37,7 +38,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="80dp"
                 android:orientation="vertical"
                 android:gravity="center_vertical"
                 android:paddingLeft="16dp">
@@ -63,7 +64,7 @@
                         android:text="Status"
                         android:textColor="@color/black"
                         android:textSize="14dp"
-                        android:textStyle="bold"
+                        android:textStyle="bold|italic"
                         android:fontFamily="@font/ralewayregular"/>
                 </LinearLayout>
 
@@ -100,9 +101,9 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingLeft="16dp"
-                    android:paddingTop="8dp"
+                    android:paddingTop="14dp"
                     android:paddingRight="16dp"
-                    android:paddingBottom="12dp">
+                    android:paddingBottom="16dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -243,9 +244,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="24dp"
                         android:orientation="horizontal"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="14dp"
                         android:layout_marginLeft="16dp"
-                        android:layout_marginBottom="4dp">
+                        android:layout_marginBottom="8dp">
                         <ImageView
                             android:layout_width="22dp"
                             android:layout_height="26dp"
@@ -270,10 +271,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12dp"
                         android:layout_marginRight="12dp"
-                        android:layout_marginBottom="4dp"
+                        android:layout_marginBottom="8dp"
                         app:cardCornerRadius="12dp"
                         app:contentPadding="8dp"
-                        app:cardElevation="20dp">
+                        app:cardElevation="8dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -368,12 +369,12 @@
                 </LinearLayout>
 
 
-                <ImageView
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:src="@drawable/calculateline"/>
+<!--                <ImageView-->
+<!--                    android:layout_marginLeft="16dp"-->
+<!--                    android:layout_marginRight="16dp"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="2dp"-->
+<!--                    android:src="@drawable/calculateline"/>-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -382,7 +383,7 @@
                     android:layout_gravity="center_vertical"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
-                    android:paddingBottom="8dp">
+                    android:paddingBottom="14dp">
 
                     <TextView
                         android:layout_width="100dp"
@@ -416,6 +417,7 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/lastLine"
                     android:layout_width="match_parent"
                     android:layout_height="3dp"
                     android:src="@drawable/lineblack"/>
@@ -427,7 +429,7 @@
                     android:layout_marginBottom="16dp"
                     android:orientation="vertical"
                     android:paddingLeft="16dp"
-                    android:paddingTop="8dp"
+                    android:paddingTop="14dp"
                     android:paddingRight="16dp"
                     android:paddingBottom="12dp">
 
@@ -610,43 +612,83 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_horizontal">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="horizontal"-->
+<!--                    android:gravity="center_horizontal">-->
 
-                    <android.widget.Button
-                        android:id="@+id/btnCancel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_gravity="center_horizontal"
-                        android:text="Cancel"
-                        android:fontFamily="@font/ralewayregular"
-                        android:background="@drawable/backgroundcancel"/>
+<!--                    <android.widget.Button-->
+<!--                        android:id="@+id/btnCancel"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="30dp"-->
+<!--                        android:layout_gravity="center_horizontal"-->
+<!--                        android:text="Cancel"-->
+<!--                        android:fontFamily="@font/ralewayregular"-->
+<!--                        android:background="@drawable/backgroundcancel"/>-->
 
-                    <Space
-                        android:visibility="gone"
-                        android:id="@+id/space"
-                        android:layout_width="12dp"
-                        android:layout_height="match_parent"/>
+<!--                    <Space-->
+<!--                        android:visibility="gone"-->
+<!--                        android:id="@+id/space"-->
+<!--                        android:layout_width="12dp"-->
+<!--                        android:layout_height="match_parent"/>-->
 
-                    <android.widget.Button
-                        android:visibility="gone"
-                        android:id="@+id/btnSave"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_gravity="center_horizontal"
-                        android:text="Save"
-                        android:fontFamily="@font/ralewayregular"
-                        android:background="@drawable/buttonsave"/>
+<!--                    <android.widget.Button-->
+<!--                        android:visibility="gone"-->
+<!--                        android:id="@+id/btnSave"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="30dp"-->
+<!--                        android:layout_gravity="center_horizontal"-->
+<!--                        android:text="Save"-->
+<!--                        android:fontFamily="@font/ralewayregular"-->
+<!--                        android:background="@drawable/buttonsave"/>-->
 
-                </LinearLayout>
+<!--                </LinearLayout>-->
 
             </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
+
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+
+        <android.widget.Button
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_gravity="center_horizontal"
+            android:text="Cancel"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            android:fontFamily="@font/ralewayregular"
+            android:background="@drawable/backgroundcancel"/>
+
+        <Space
+            android:visibility="gone"
+            android:id="@+id/space"
+            android:layout_width="12dp"
+            android:layout_height="match_parent"/>
+
+        <android.widget.Button
+            android:visibility="gone"
+            android:id="@+id/btnSave"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
+            android:text="Save"
+            android:fontFamily="@font/ralewayregular"
+            android:background="@drawable/buttonsave"/>
+
+    </LinearLayout>
 
 </LinearLayout>
