20230112 - memperbaiki UI popup, orderDetail, dll

--- a/app/src/main/res/drawable/borderlogout.xml
+++ b/app/src/main/res/drawable/borderlogout.xml
@@ -3,6 +3,6 @@
 
     <solid android:color="#ffffff"/>
     <stroke android:width="3dp"
-        android:color="#b8b4b4"/>
+        android:color="#000000"/>
 
 </shape>
