--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="380dp"
-    android:layout_height="650dp"
+    android:layout_height="664dp"
     android:orientation="vertical"
     android:layout_gravity="center"
     android:background="@drawable/backgroundmainpopup">
@@ -164,13 +164,13 @@
         <TextView
             android:id="@+id/description"
             android:layout_width="300dp"
-            android:layout_height="90dp"
+            android:layout_height="80dp"
             android:layout_marginTop="30dp"
             android:paddingLeft="5dp"
             android:background="@drawable/edittextdetaillaundry"
             android:textColor="@color/black"
             android:textSize="16dp"
-            android:text="asdasdas"
+            android:text="descs"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -232,7 +232,7 @@
             android:id="@+id/Kg"
             android:layout_width="232dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="48dp"
+            android:layout_marginLeft="52dp"
             android:layout_marginTop="36dp"
             android:background="@drawable/edittextdetaillaundry"
             android:paddingLeft="5dp"
@@ -246,12 +246,12 @@
             android:id="@+id/txtSatuan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="28dp"
             android:text="Per satuan"
             android:textColor="@color/white"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.049"
+            app:layout_constraintHorizontal_bias="0.046"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txtKg" />
 
@@ -259,7 +259,7 @@
             android:id="@+id/Satuan"
             android:layout_width="232dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="48dp"
+            android:layout_marginLeft="52dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/edittextdetaillaundry"
             android:paddingLeft="5dp"
@@ -286,7 +286,7 @@
             android:id="@+id/Pair"
             android:layout_width="232dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="48dp"
+            android:layout_marginLeft="52dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/edittextdetaillaundry"
             android:paddingLeft="5dp"
@@ -295,6 +295,33 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/txtSatuan"
             app:layout_constraintTop_toTopOf="@+id/Satuan" />
+
+        <TextView
+            android:id="@+id/txtPickup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:text="Jasa Pickup"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.049"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/txtPair" />
+
+        <TextView
+            android:id="@+id/Pickup"
+            android:layout_width="232dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="52dp"
+            android:layout_marginTop="28dp"
+            android:background="@drawable/edittextdetaillaundry"
+            android:paddingLeft="5dp"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/txtPair"
+            app:layout_constraintTop_toTopOf="@+id/Pair" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
