--- a/app/src/main/res/layout/popupcancelorder.xml
+++ b/app/src/main/res/layout/popupcancelorder.xml
@@ -2,88 +2,132 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp">
-
-        <TextView
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="360dp"
+        app:cardBackgroundColor="@color/red"
+        app:cardCornerRadius="16dp">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Apa alasan Anda membatalkan pesanan?"
-            android:textColor="@color/red"
-            android:textStyle="bold"
-            android:fontFamily="@font/ralewayregular"
-            android:gravity="center"
-            android:background="@drawable/borderlogout"/>
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@color/red">
 
-    <LinearLayout
-        android:id="@+id/alasan1"
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
+                <TextView
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Apa alasan Anda membatalkan pesanan?"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/ralewayregular"
+                    android:gravity="center"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Salah memilih tempat laundry"
-            android:textColor="@color/black"
-            android:fontFamily="@font/ralewayregular"
-            android:gravity="center_vertical"
-            android:background="@drawable/borderlogout"/>
+            </LinearLayout>
 
-    </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:src="@drawable/lineblackpopup"/>
 
-    <LinearLayout
-        android:id="@+id/alasan2"
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
+            <LinearLayout
+                android:id="@+id/alasan1"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/white">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Ingin mengubah servis laundry"
-            android:textColor="@color/black"
-            android:fontFamily="@font/ralewayregular"
-            android:gravity="center_vertical"
-            android:background="@drawable/borderlogout"/>
+                <TextView
+                    android:paddingLeft="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Salah memilih tempat laundry"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/ralewayregular"
+                    android:gravity="center_vertical"/>
 
-    </LinearLayout>
+            </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/alasan3"
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:src="@drawable/lineblackpopup"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Salah input berat/satuan/pasang"
-            android:textColor="@color/black"
-            android:fontFamily="@font/ralewayregular"
-            android:gravity="center_vertical"
-            android:background="@drawable/borderlogout"/>
+            <LinearLayout
+                android:id="@+id/alasan2"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/white">
 
-    </LinearLayout>
+                <TextView
+                    android:paddingLeft="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Ingin mengubah servis laundry"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/ralewayregular"
+                    android:gravity="center_vertical"/>
 
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/alasan4"
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
+            </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Ingin mengubah detail pickup"
-            android:textColor="@color/black"
-            android:fontFamily="@font/ralewayregular"
-            android:gravity="center_vertical"
-            android:background="@drawable/borderlogout"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:src="@drawable/lineblackpopup"/>
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/alasan3"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/white">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/ralewayregular"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="8dp"
+                    android:text="Salah input berat/satuan/pasang"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/lineblack"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:src="@drawable/lineblackpopup"/>
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/alasan4"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/white">
+
+                <TextView
+                    android:paddingLeft="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Ingin mengubah detail pickup"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/ralewayregular"
+                    android:gravity="center_vertical"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
 
 </LinearLayout>
