--- a/app/src/main/res/layout/popupcancelorderlaundry.xml
+++ b/app/src/main/res/layout/popupcancelorderlaundry.xml
@@ -2,56 +2,78 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="80dp">
-
-        <TextView
+        android:layout_height="360dp"
+        app:cardBackgroundColor="@color/red"
+        app:cardCornerRadius="16dp">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Apa alasan Anda membatalkan pesanan?"
-            android:textColor="@color/red"
-            android:textStyle="bold"
-            android:fontFamily="@font/ralewayregular"
-            android:gravity="center"
-            android:background="@drawable/borderlogout"/>
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp">
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Apa alasan Anda membatalkan pesanan?"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/ralewayregular"
+                    android:gravity="center"/>
 
-    <LinearLayout
-        android:id="@+id/alasan1"
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
+            </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:src="@drawable/lineblackpopup"/>
+            <LinearLayout
+                android:id="@+id/alasan1"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/white">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Pesanan melebihi batas maksimum"
-            android:textColor="@color/black"
-            android:fontFamily="@font/ralewayregular"
-            android:gravity="center_vertical"
-            android:background="@drawable/borderlogout"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:paddingLeft="8dp"
+                    android:layout_height="match_parent"
+                    android:text="Pesanan melebihi batas maksimum"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/ralewayregular"
+                    android:gravity="center_vertical"/>
 
-    </LinearLayout>
+            </LinearLayout>
+            <ImageView
+                android:id="@+id/lineblack"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:src="@drawable/lineblackpopup"/>
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/alasan2"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/white">
 
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/alasan2"
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Jadwal pickup tidak sesuai"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/ralewayregular"
+                    android:gravity="center_vertical"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Jarak pickup terlalu jauh"
-            android:textColor="@color/black"
-            android:fontFamily="@font/ralewayregular"
-            android:gravity="center_vertical"
-            android:background="@drawable/borderlogout"/>
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+
+
 
 </LinearLayout>
